tests/snapshots/examples_fixtures/suggestions__test_suggestions.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/suggestions/test_suggestions.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/suggestions/test_suggestions.flx:8:1
  |
8 | print(coun);
  | ^^^^^^^^^^^^
  | ------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/suggestions/test_suggestions.flx:8:1
  |
8 | print(coun);
  | ^^^^^^^^^^^^
  | ------------ effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


--> compiler error[E004]: UNDEFINED VARIABLE

I can't find a value named `coun`.

  --> examples/suggestions/test_suggestions.flx:8:7
  |
8 | print(coun);
  |       ^^^^

Hint:
  Define it first: let coun = ...;


Help:
  Did you mean one of: `count`, `counter`, `join`?

Found 3 errors.
== stdout ==
<not executed>
